src/test/resources/tokens/invalid/field_descriptor_object_illegal_bracket.unpick
unpick v3
target_field foo.Bar baz L[java/lang/String; g